--- a/css/main.css
+++ b/css/main.css
@@ -51,11 +51,9 @@ body {
     margin: 12px;
     color: #ffffff; }
   body .cf-content {
-    display: flex;
     justify-content: center;
     margin: 0 auto;
-    max-width: 730px;
-    position: relative; }
+    max-width: 730px; }
   body .cf-head-part {
     padding: 5px 20px;
     width: 100%;
@@ -63,15 +61,16 @@ body {
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0px 0px 1px 0px;
-    position: absolute;
-    top: -60px;
-    flex-direction: column; }
+    flex-direction: column;
+    margin: -45px auto 10px;
+    position: relative; }
   body .cf-head-part-logo {
     background-image: url("/images/logo-mastercraft.svg");
     height: 56px;
     width: 56px;
     position: absolute;
-    top: -90px; }
+    top: -30px;
+    left: 45%; }
   body .cf-head-part-text {
     display: flex;
     text-align: center;
