--- a/scss/project/_home.scss
+++ b/scss/project/_home.scss
@@ -34,11 +34,9 @@ body {
   }
 
   .cf-content {
-    display: flex;
     justify-content: center;
     margin: 0 auto;
     max-width: 730px;
-    position: relative;
   }
 
   .cf-head-part {
@@ -48,9 +46,9 @@ body {
     background-color: $white;
     border-radius: 8px;
     box-shadow: 0px 0px 1px 0px;
-    position: absolute;
-    top: -60px;
     flex-direction: column;
+    margin: -45px auto 10px;
+    position: relative;
   }
 
   .cf-head-part-logo {
@@ -58,7 +56,8 @@ body {
     height: 56px;
     width: 56px;
     position: absolute;
-    top: -90px;
+    top: -30px;
+    left: 45%;
   }
 
   .cf-head-part-text {
