--- a/css/main.css
+++ b/css/main.css
@@ -113,9 +113,173 @@ body {
     padding: 0px 25px 0px 50px;
     cursor: pointer; }
   body .cf-money-part {
-    padding: 5px 20px;
+    padding: 40px;
     width: 100%;
     display: flex;
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0px 0px 1px 0px; }
+  body .cf-backed {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    font-size: 32px;
+    margin: 20px;
+    font-weight: 700;
+    border-right: 1px solid #979797; }
+  body .cf-backed span {
+    font-size: 15px;
+    font-weight: 300;
+    color: #7a7a7a; }
+  body .cf-total-backers {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    font-size: 32px;
+    margin: 20px;
+    font-weight: 700;
+    border-right: 1px solid #979797; }
+  body .cf-total-backers span {
+    font-size: 15px;
+    font-weight: 300;
+    color: #7a7a7a; }
+  body .cf-days-left {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    font-size: 32px;
+    margin: 20px;
+    font-weight: 700; }
+  body .cf-days-left span {
+    font-size: 15px;
+    font-weight: 300;
+    color: #7a7a7a; }
+  body .progress-bar {
+    padding: 10px;
+    width: 50%;
+    height: 20px;
+    font-size: 12px;
+    line-height: 20px;
+    color: #fff;
+    text-align: center;
+    background-color: #3cb3ab;
+    border-radius: 33px;
+    -webkit-transition: width 0.6s ease;
+    -o-transition: width 0.6s ease;
+    transition: width 0.6s ease; }
+  body .cf-progress-bar {
+    display: flex;
+    margin-top: -35px;
+    margin-left: 35px;
+    width: 90%; }
+  body .cf-about {
+    margin-top: 25px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0px 0px 1px 0px; }
+  body .cf-about-head {
+    font-size: 20px;
+    font-weight: 600;
+    padding: 40px 0px;
+    color: #333; }
+  body .cf-text {
+    padding: 0px 40px;
+    font-size: 16px;
+    color: #7a7a7a;
+    margin-bottom: 30px; }
+  body .cf-mahogany {
+    opacity: 0.7;
+    padding: 20px;
+    margin-top: 25px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0px 0px 1px 0px; }
+  body .cf-black {
+    padding: 20px;
+    margin-top: 25px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0px 0px 1px 0px; }
+  body .cf-bambo {
+    padding: 20px;
+    margin-top: 25px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0px 0px 1px 0px; }
+  body .cf-mahogany {
+    display: flex;
+    justify-content: space-between; }
+  body .cf-black-head {
+    display: flex;
+    justify-content: space-between; }
+  body .cf-bambo-head {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: 700; }
+  body .cf-mahogany-head {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: 700; }
+  body .cf-black-head span {
+    color: #3cb3ab;
+    font-size: 15px;
+    font-weight: 500; }
+  body .cf-mahogany-head span {
+    color: #3cb3ab;
+    font-size: 15px;
+    font-weight: 500; }
+  body .cf-bambo-head span {
+    color: #3cb3ab;
+    font-size: 15px;
+    font-weight: 500; }
+  body .cf-mahogany-text {
+    margin: 15px 0px;
+    font-size: 16px;
+    color: #7a7a7a; }
+  body .cf-black-text {
+    margin: 15px 0px;
+    font-size: 16px;
+    color: #7a7a7a; }
+  body .cf-bambo-text {
+    margin: 15px 0px;
+    font-size: 16px;
+    color: #7a7a7a; }
+  body .cf-left-button {
+    display: flex;
+    align-items: center;
+    justify-content: space-between; }
+  body .cf-left-button h1 {
+    display: flex;
+    align-items: center;
+    font-size: 32px;
+    font-weight: 700; }
+  body .cf-left-button span {
+    padding-left: 5px;
+    font-size: 15px;
+    color: #7a7a7a; }
+  body .cf-about-primary-button {
+    font-weight: 700;
+    border-radius: 33px;
+    background-color: #3cb3ab;
+    border: none;
+    padding: 15px 40px;
+    color: #ffffff;
+    cursor: pointer; }
+  body .cf-about-primary-button:hover {
+    background-color: #147a73; }
