--- a/scss/project/_home.scss
+++ b/scss/project/_home.scss
@@ -119,11 +119,231 @@ body {
   }
 
   .cf-money-part {
-    padding: 5px 20px;
+    padding: 40px;
     width: 100%;
     display: flex;
     background-color: $white;
     border-radius: 8px;
     box-shadow: 0px 0px 1px 0px;
+  }
+
+  .cf-backed {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    font-size: 32px;
+    margin: 20px;
+    font-weight: 700;
+    border-right: 1px solid #979797;
+  }
+
+  .cf-backed span {
+    font-size: 15px;
+    font-weight: 300;
+    color: $border;
+  }
+
+  .cf-total-backers {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    font-size: 32px;
+    margin: 20px;
+    font-weight: 700;
+    border-right: 1px solid #979797;
+  }
+
+  .cf-total-backers span {
+    font-size: 15px;
+    font-weight: 300;
+    color: $border;
+  }
+
+  .cf-days-left {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    font-size: 32px;
+    margin: 20px;
+    font-weight: 700;
+  }
+
+  .cf-days-left span {
+    font-size: 15px;
+    font-weight: 300;
+    color: $border;
+  }
+
+  .progress-bar {
+    padding: 10px;
+    width: 50%;
+    height: 20px;
+    font-size: 12px;
+    line-height: 20px;
+    color: #fff;
+    text-align: center;
+    background-color: $primary;
+    border-radius: 33px;
+    -webkit-transition: width 0.6s ease;
+    -o-transition: width 0.6s ease;
+    transition: width 0.6s ease;
+  }
+  .cf-progress-bar {
+    display: flex;
+    margin-top: -35px;
+    margin-left: 35px;
+    width: 90%;
+  }
+
+  .cf-about {
+    margin-top: 25px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+
+    justify-content: center;
+    flex-direction: column;
+    background-color: $white;
+    border-radius: 8px;
+    box-shadow: 0px 0px 1px 0px;
+  }
+
+  .cf-about-head {
+    font-size: 20px;
+    font-weight: 600;
+    padding: 40px 0px;
+    color: #333;
+  }
+
+  .cf-text {
+    padding: 0px 40px;
+    font-size: 16px;
+    color: $border;
+    margin-bottom: 30px;
+  }
+
+  .cf-mahogany {
+    opacity: 0.7;
+    padding: 20px;
+    margin-top: 25px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    background-color: $white;
+    border-radius: 8px;
+    box-shadow: 0px 0px 1px 0px;
+  }
+
+  .cf-black {
+    padding: 20px;
+    margin-top: 25px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    background-color: $white;
+    border-radius: 8px;
+    box-shadow: 0px 0px 1px 0px;
+  }
+
+  .cf-bambo {
+    padding: 20px;
+    margin-top: 25px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    background-color: $white;
+    border-radius: 8px;
+    box-shadow: 0px 0px 1px 0px;
+  }
+
+  .cf-mahogany {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .cf-black-head {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .cf-bambo-head {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: 700;
+  }
+
+  .cf-mahogany-head {
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+    font-weight: 700;
+  }
+
+  .cf-black-head span {
+    color: $primary;
+    font-size: 15px;
+    font-weight: 500;
+  }
+
+  .cf-mahogany-head span {
+    color: $primary;
+    font-size: 15px;
+    font-weight: 500;
+  }
+
+  .cf-bambo-head span {
+    color: $primary;
+    font-size: 15px;
+    font-weight: 500;
+  }
+
+  .cf-mahogany-text {
+    margin: 15px 0px;
+    font-size: 16px;
+    color: $border;
+  }
+
+  .cf-black-text {
+    margin: 15px 0px;
+    font-size: 16px;
+    color: $border;
+  }
+
+  .cf-bambo-text {
+    margin: 15px 0px;
+    font-size: 16px;
+    color: $border;
+  }
+
+  .cf-left-button {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .cf-left-button h1 {
+    display: flex;
+    align-items: center;
+    font-size: 32px;
+    font-weight: 700;
+  }
+  .cf-left-button span {
+    padding-left: 5px;
+    font-size: 15px;
+    color: $border;
+  }
+
+  .cf-about-primary-button {
+    font-weight: 700;
+    border-radius: 33px;
+    background-color: $primary;
+    border: none;
+    padding: 15px 40px;
+    color: $white;
+    cursor: pointer;
+  }
+  .cf-about-primary-button:hover {
+    background-color: $primaryh;
   }
 }
