--- a/scss/project/_home.scss
+++ b/scss/project/_home.scss
@@ -196,7 +196,7 @@ body {
   }
 
   .cf-about {
-    margin-top: 25px;
+    margin: 25px 0px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -224,8 +224,7 @@ body {
 
   .cf-mahogany {
     opacity: 0.7;
-    padding: 20px;
-    margin-top: 25px;
+    margin: 25px 0px;
     width: 90%;
     display: flex;
     flex-direction: column;
@@ -235,7 +234,6 @@ body {
   }
 
   .cf-black {
-    padding: 20px;
     margin-top: 25px;
     width: 90%;
     display: flex;
@@ -246,7 +244,6 @@ body {
   }
 
   .cf-bambo {
-    padding: 20px;
     margin-top: 25px;
     width: 90%;
     display: flex;
@@ -262,11 +259,17 @@ body {
   }
 
   .cf-black-head {
+    padding: 20px;
+    padding-bottom: 0px;
     display: flex;
+    font-size: 18px;
+    font-weight: 700;
     justify-content: space-between;
   }
 
   .cf-bambo-head {
+    padding: 20px;
+    padding-bottom: 0px;
     display: flex;
     justify-content: space-between;
     font-size: 18px;
@@ -274,10 +277,16 @@ body {
   }
 
   .cf-mahogany-head {
+    padding: 20px;
+    padding-bottom: 0px;
     display: flex;
     justify-content: space-between;
     font-size: 18px;
     font-weight: 700;
+  }
+
+  .notworking {
+    pointer-events: none;
   }
 
   .cf-black-head span {
@@ -299,24 +308,28 @@ body {
   }
 
   .cf-mahogany-text {
-    margin: 15px 0px;
+    margin: 20px;
+    margin-left: 55px;
     font-size: 16px;
     color: $border;
   }
 
   .cf-black-text {
-    margin: 15px 0px;
+    margin: 20px;
+    margin-left: 55px;
     font-size: 16px;
     color: $border;
   }
 
   .cf-bambo-text {
-    margin: 15px 0px;
+    margin: 20px;
+    margin-left: 55px;
     font-size: 16px;
     color: $border;
   }
 
   .cf-left-button {
+    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -346,4 +359,202 @@ body {
   .cf-about-primary-button:hover {
     background-color: $primaryh;
   }
+
+  .cf-head-fix {
+    display: flex;
+    padding: 20px 20px 0px 20px;
+    justify-content: space-between;
+  }
+
+  .cf-pledge {
+    padding-left: 20px;
+  }
+
+  .cf-about-head-back {
+    font-size: 20px;
+    font-weight: 600;
+    padding: 40px 0px;
+    color: #333;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .modal {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  .modal-thank {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  .modal-content-thank {
+    background-color: #fefefe;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    max-width: 465px;
+    border-radius: 8px;
+    color: $border;
+  }
+
+  .modal-content {
+    background-color: #fefefe;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    max-width: 730px;
+    border-radius: 8px;
+  }
+
+  .mfix {
+    margin: 25px auto;
+  }
+
+  .mafix {
+    margin: 25px;
+  }
+
+  .bfix {
+    pointer-events: none;
+  }
+
+  .modal-part {
+    width: 100%;
+  }
+
+  .container {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+
+  .container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+  }
+
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+  }
+
+  .container:hover input ~ .checkmark {
+    background-color: #ccc;
+  }
+
+  .container input:checked ~ .checkmark {
+    box-shadow: 0px 0px 1px 0px;
+  }
+
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+    background-color: #3cb3ab;
+  }
+
+  .container input:checked ~ .checkmark:after {
+    display: block;
+    background-color: #3cb3ab;
+  }
+
+  .container .checkmark:after {
+    top: 5px;
+    left: 5px;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background: white;
+  }
+
+  .cf-pedge-enter {
+    display: none;
+    justify-content: space-between;
+    border-top: 1px solid rgba(107, 101, 101, 0.507);
+    padding: 40px;
+    padding-bottom: 20px;
+    color: $border;
+  }
+
+  .cf-pedge-button {
+    padding: 13px;
+    font-size: 12px;
+    font-weight: 400;
+  }
+
+  .cf-pedge-enter-input {
+    display: flex;
+    margin-right: 20px;
+    border-radius: 20px;
+    border: none;
+    box-shadow: 0px 0px 1px 0px;
+    padding: 10px;
+    width: 100px;
+  }
+
+  .cf-pedge-enter-input input {
+    outline: none;
+    width: 100%;
+    border: none;
+    margin-left: 10px;
+  }
+
+  .cf-pedge-enter-buttons {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .input-money {
+    position: absolute;
+  }
+}
+.getit {
+  margin-top: 30px;
+  padding: 20px;
 }
