--- a/css/main.css
+++ b/css/main.css
@@ -209,6 +209,14 @@ body {
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0px 0px 1px 0px; }
+  body .cf-free {
+    margin-top: 25px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0px 0px 1px 0px; }
   body .cf-bambo {
     margin-top: 25px;
     width: 90%;
@@ -376,6 +384,11 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none; }
+  body .goBack {
+    cursor: pointer; }
+  body .pfix {
+    padding: 0px;
+    justify-content: flex-start; }
   body .container input {
     position: absolute;
     opacity: 0;
@@ -388,6 +401,8 @@ body {
     width: 25px;
     background-color: #eee;
     border-radius: 50%; }
+  body .active {
+    border: 1px solid #3cb3ab; }
   body .container:hover input ~ .checkmark {
     background-color: #ccc; }
   body .container input:checked ~ .checkmark {
@@ -407,7 +422,21 @@ body {
     height: 15px;
     border-radius: 50%;
     background: white; }
-  body .cf-pedge-enter {
+  body .cf-pedge-enter-free {
+    display: none;
+    justify-content: space-between;
+    border-top: 1px solid rgba(107, 101, 101, 0.507);
+    padding: 40px;
+    padding-bottom: 20px;
+    color: #7a7a7a; }
+  body .cf-pedge-enter-bambo {
+    display: none;
+    justify-content: space-between;
+    border-top: 1px solid rgba(107, 101, 101, 0.507);
+    padding: 40px;
+    padding-bottom: 20px;
+    color: #7a7a7a; }
+  body .cf-pedge-enter-black {
     display: none;
     justify-content: space-between;
     border-top: 1px solid rgba(107, 101, 101, 0.507);
@@ -444,3 +473,65 @@ body {
 .getit {
   margin-top: 30px;
   padding: 20px; }
+
+.filler {
+  filter: invert(58%) sepia(85%) saturate(300%) hue-rotate(127deg) brightness(88%) contrast(92%); }
+
+.filler-cap {
+  fill: white; }
+
+.bfix {
+  pointer-events: none; }
+
+.cf-hamburger {
+  display: none;
+  background-image: url("/images/icon-hamburger.svg");
+  width: 20px;
+  height: 20px; }
+
+@media (max-width: 576px) {
+  .cf-hamburger {
+    display: block; }
+  .cf-nav-bar-part {
+    display: none; }
+  .cf-nav-bckg {
+    background-image: url("/images/image-hero-mobile.jpg") !important;
+    height: 30vh !important; }
+  .cf-content {
+    width: 90%; }
+  .secondary-button {
+    display: none; }
+  .cf-head-buttons {
+    justify-content: space-evenly; }
+  .cf-money-part {
+    flex-direction: column;
+    align-items: center;
+    text-align: center; }
+  .cf-backed {
+    border: none !important; }
+  .cf-total-backers {
+    border: none !important; }
+  .cf-bambo-head {
+    flex-direction: column; }
+  .cf-left-button {
+    align-items: flex-start !important;
+    flex-direction: column; }
+  .cf-left-button button {
+    margin-top: 15px; }
+  .cf-black-head {
+    flex-direction: column; }
+  .cf-mahogany-head {
+    flex-direction: column; }
+  .cf-pedge-enter-bambo {
+    flex-direction: column;
+    align-items: center; }
+  .cf-pedge-enter-black {
+    flex-direction: column;
+    align-items: center; }
+  .cf-pedge-enter-free {
+    flex-direction: column;
+    align-items: center; }
+  .cf-pedge-enter-buttons {
+    padding-top: 20px; }
+  .modal-content-thank {
+    max-width: 385px !important; } }
